# yew-app-template

./: Cargo.toml
