[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
strum = "0.24"
strum_macros = "0.24"
serde = "1"
serde_derive = "1"
gloo = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
